# tenjin-graphrag

./: .coveragerc  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  dependency-review.yml  docker.yml  e2e.yml  release.yml
data/theories/: README.md  concepts.json  concepts_extended.json  contexts_extended.json  evidence.json  evidence_extended.json  methodologies_extended.json  principles.json  relationships.json  relationships_extended.json  theories.json  theories_extended.json  theorists.json  theorists_extended.json
docs/: API_REFERENCE.md  CI_CD.md  EDUCATION_THEORIES.md  MCP_INTEGRATION.md  USAGE_GUIDE.md
docs/Qiita/: ai-education-paradigm-shift.md
src/tengin_mcp/: __init__.py  server.py
src/tengin_mcp/domain/: __init__.py  errors.py
src/tengin_mcp/domain/entities/: __init__.py  concept.py  evidence.py  principle.py  theorist.py  theory.py
src/tengin_mcp/domain/repositories/: __init__.py  interfaces.py
src/tengin_mcp/domain/value_objects/: __init__.py  citation_format.py  evidence_level.py  theory_category.py
src/tengin_mcp/infrastructure/: __init__.py  cache.py  config.py
src/tengin_mcp/infrastructure/adapters/: __init__.py  chromadb_adapter.py  embedding_adapter.py  neo4j_adapter.py
src/tengin_mcp/infrastructure/repositories/: __init__.py  neo4j_graph_repository.py  neo4j_theory_repository.py
src/tengin_mcp/prompts/: __init__.py  education_prompts.py
src/tengin_mcp/resources/: __init__.py  theory_resources.py
src/tengin_mcp/scripts/: __init__.py  seed_data.py  seed_extended_data.py  verify_tools.py
src/tengin_mcp/tools/: __init__.py  citation_tools.py  graph_tools.py  methodology_tools.py  system_tools.py  theory_tools.py
steering/: product.ja.md  project.yml  structure.ja.md  tech.ja.md
storage/archive/: DESIGN-001-architecture-v1.md  REQ-001-education-theory-graphrag-v1.md  TASKS-001-implementation-v1.md
storage/specs/: ADR-001-technology-stack.md  ADR-002-graph-schema.md  DESIGN-001-architecture.md  REQ-001-education-theory-graphrag.md  TASKS-001-implementation.md
tests/: conftest.py
tests/e2e/: test_chromadb_e2e.py  test_expanded_data_e2e.py  test_mcp_server_e2e.py  test_system_tools_e2e.py  test_workflow_e2e.py
tests/integration/: test_citation_tools.py  test_graph_repository.py  test_graph_tools.py  test_mcp_server.py  test_mcp_tools.py  test_methodology_tools.py  test_neo4j_adapter.py  test_resources.py  test_server.py  test_theory_repository.py  test_theory_tools.py
tests/unit/: test_cache.py  test_chromadb_adapter.py  test_embedding_adapter.py  test_entities.py  test_errors.py  test_prompts.py  test_system_tools.py  test_tools.py  test_value_objects.py
