[project]
name = "tengin-mcp"
version = "0.1.0"
description = "Education Theory GraphRAG MCP Server - 教育理論ナレッジグラフを提供するMCPサーバー"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "nahisaho", email = "nahisaho@example.com" }
]
keywords = ["mcp", "graphrag", "education", "theory", "neo4j", "chromadb", "ai", "knowledge-graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "neo4j>=5.0.0",
    "chromadb>=0.4.0",
    "esperanto>=2.9.0",
    "httpx>=0.25.0",
    "urllib3>=2.6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/nahisaho/TENGIN-GraphRAG"
Repository = "https://github.com/nahisaho/TENGIN-GraphRAG"
Documentation = "https://github.com/nahisaho/TENGIN-GraphRAG#readme"
Issues = "https://github.com/nahisaho/TENGIN-GraphRAG/issues"

[project.scripts]
tengin-server = "tengin_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tengin_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["tengin_mcp"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["neo4j.*", "chromadb.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src/tengin_mcp --cov-report=term-missing"
